--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,40 @@
-/* #logo{
-    width: 50px;
-    height: 50px;
-    margin: 0 auto;
-    display: block;
-    margin-top: 20px;
-    margin-bottom: 20px;
-} */ 
+.search-container {
+  display: none;
+}
+
+.search-container.active {
+  display: flex;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  border: 1px solid #7a7a7a;
+  border-radius: 25px;
+  padding: 8px 12px;
+  background-color: none;
+  transition: border-color 0.3s ease;
+}
+
+.search-container:hover,
+.search:focus-within {
+  border-color: #080808;
+}
+
+.search-input {
+  font-size: 16px;
+  color: #1e1e1e;
+  border: none;
+  outline: none;
+  background: transparent;
+  width: 250px;
+  transition: width 0.3s ease;
+}
+
+.search-input:focus {
+  width: 300px;
+}
+
+.search-input::placeholder {
+  color: #7a7a7a;
+}
